- use process builder to start external program
- set LANG=en_US for English output